Implement SSL config reloading for the netty http client NettyHttpServer also apparently didn't reload when changing the micronaut.ssl configuration, so I fixed that too.
Likely fixes #7873